# ungit

./: Cargo.toml  README.md
src/: allowlist.rs  cli.rs  diagnose.rs  error.rs  journal.rs  main.rs  output.rs
src/checks/: detached_head.rs  divergence.rs  duplicate_patch.rs  ignored_files.rs  merge_state.rs  mod.rs  upstream.rs
src/commands/: check.rs  mod.rs  repair.rs  save.rs  start.rs  status.rs  sync.rs  undo.rs  unsync.rs
src/git/: branch.rs  command.rs  commit.rs  mod.rs  rebase.rs  remote.rs  repo.rs  status.rs
src/util/: fs.rs  paths.rs
