[package]
name = "ungit"
version = "0.1.0"
edition = "2024"
description = "A safety layer over Git for everyday workflows."
license = "Apache-2.0"

[[bin]]
name = "ungit"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
thiserror = "=1.0.58"
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.115"
owo-colors = "=4.0.0"

[profile.release]
opt-level = 3
lto = true
strip = true
